#TODO: 
SET ( RESOURCES Base.7z "${SHARED_PLUGINS}")
IF( APPLE )
	SET_SOURCE_FILES_PROPERTIES( Base.7z PROPERTIES MACOSX_PACKAGE_LOCATION Resources )
	SET_SOURCE_FILES_PROPERTIES( ${SHARED_PLUGINS} PROPERTIES GENERATED YES MACOSX_PACKAGE_LOCATION Plugins )
	ADD_EXECUTABLE( ResourcesTest MACOSX_BUNDLE main.cpp ${RESOURCES})
	#installation routines
ELSE( APPLE )
#Non apple platforms 
	IF( WIN32 )
		ADD_EXECUTABLE( ResourcesTest main.cpp )
	ELSE( WIN32 )
		ADD_EXECUTABLE( ResourcesTest WIN32 main.cpp )
	ENDIF( WIN32 )

ENDIF( APPLE )
TARGET_LINK_LIBRARIES( ResourcesTest ${RUNTIME_LINK_LIBRARIES} ${GLOBAL_LINK_LIBRARIES} )